--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,12 @@ matrix:
      python: 3.4
    - env: TOXENV=py35-dj19
      python: 3.5
+   - env: TOXENV=py27-dj110
+     python: 2.7
+   - env: TOXENV=py34-dj110
+     python: 3.4
+   - env: TOXENV=py35-dj110
+     python: 3.5
    - env: TOXENV=flake8
      python: 3.4
 before_install:
