--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34,35}-dj{18,19}, flake8
+envlist = py{27,33,34,35}-dj{18,19,110}, flake8
 
 [flake8]
 max-line-length = 120
@@ -27,6 +27,7 @@ deps =
 
     dj18: Django>=1.8.1,<1.9
     dj19: Django>=1.9,<1.10
+    dj110: Django>=1.10,<1.11
 [testenv:flake8]
 basepython = python3.4
 deps = flake8==3.0.4
